fix desktop menu disappearing behind imags

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -226,6 +226,7 @@ html {
         position: fixed;
         top: 0;
         left: 0;
+        z-index: 1;
         
         padding: 20px 20%;
         width: 100%;
